# canario

./: .gitignore  BUGS.md  Cargo.toml  LICENSE  PLAN.md  PRD-ELECTRON.md  README.md
.github/workflows/: build.yml
assets/: com.canario.Canario.desktop  style.css
canario-app/: electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.json
canario-app/src/main/: autoPaste.ts  autostart.ts  index.ts  sidecar.ts  tray.ts  updater.ts  version.ts  windowState.ts
canario-app/src/preload/: index.ts
canario-app/src/renderer/: App.tsx  index.css  index.html  index.tsx
canario-app/src/renderer/components/: HotkeyCapture.tsx  RecordingOverlay.tsx  Toast.tsx  Toggle.tsx  WordRemapping.tsx
canario-app/src/renderer/pages/: AppPage.tsx  OverlayPage.tsx
canario-app/src/renderer/primitives/: createCanario.ts
canario-app/src/renderer/state/: context.tsx  machine.ts  types.ts
canario-app/src/renderer/styles/: animations.css  themes.css
canario-cli/: Cargo.toml
canario-cli/src/: main.rs
canario-core/: Cargo.toml
canario-core/src/: canario.rs  event.rs  lib.rs  recording.rs
canario-core/src/audio/: effects.rs
canario-core/src/config/: autostart.rs  mod.rs
canario-core/src/hotkey/: mod.rs  wayland.rs  x11.rs
canario-core/src/inference/: mod.rs  postprocess.rs
canario-electron/: Cargo.toml
canario-electron/src/: main.rs
canario-gtk/: Cargo.toml
canario-gtk/src/: main.rs
canario-gtk/src/ui/: app.rs  history.rs  indicator.rs  mod.rs  model_manager.rs  settings.rs  tray.rs  word_remapping.rs
packaging/: build-all.sh  build-appimage.sh  build-deb.sh  build-flatpak.sh
src/: main.rs
src/audio/: mod.rs
src/config/: mod.rs
src/history/: mod.rs
src/hotkey/: mod.rs  processor.rs  wayland.rs  x11.rs
src/inference/: mod.rs  postprocess.rs
src/ui/: app.rs  history.rs  indicator.rs  mod.rs  model_manager.rs  paste.rs  recording.rs  settings.rs  tray.rs  word_remapping.rs
