[package]
name = "canario"
version = "0.1.0"
edition = "2021"
description = "Native Linux voice-to-text using Parakeet TDT"
license = "MIT"

[features]
default = ["static", "gui"]
static = ["sherpa-onnx/static"]
shared = ["sherpa-onnx/shared"]
gui = ["dep:gtk4", "dep:libadwaita", "dep:ksni", "dep:glib", "dep:gio"]

[dependencies]

# GUI (optional — requires libgtk-4-dev and libadwaita-1-dev)
gtk4 = { version = "0.8", features = ["v4_14"], optional = true }
libadwaita = { version = "0.6", features = ["v1_5"], optional = true }
ksni = { version = "0.3", features = ["blocking"], optional = true }
glib = { version = "0.19", optional = true }
gio = { version = "0.19", optional = true }

# Audio capture
# ASR engine - handles ONNX inference + TDT decoding
sherpa-onnx = { version = "1.12", default-features = false }

# Audio capture
cpal = "0.16"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for model download)
reqwest = { version = "0.12", features = ["json"] }

# Utilities
anyhow = "1"
dirs = "6"
parking_lot = "0.12"
ringbuf = "0.4"
arboard = "3.6"
uuid = { version = "1", features = ["v4"] }
ctrlc = "3.4"

[[bin]]
name = "canario"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "canario-cli"
path = "src/bin/canario-cli.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
