[package]
name = "canario-core"
version = "0.1.1"
edition = "2021"
description = "Core library for Canario voice-to-text — bring your own frontend"
license = "MIT"

[features]
static = ["sherpa-onnx/static"]
shared = ["sherpa-onnx/shared"]

[dependencies]
# ASR engine
sherpa-onnx = { version = "1.12", default-features = false }

# Audio capture + playback
cpal = "0.16"
rodio = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP (model download)
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
dirs = "6"
parking_lot = "0.12"
arboard = "3.6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
x11rb = "0.13"
evdev = "0.13"
